@@ -10,15 +10,8 @@ version          = 0.17
 release_tests         = 1
 travis_status         = 1
 appveyor              = 2n8jg5pikac3g953
-installer             = Alien
 github_user           = Perl5-Alien
 irc                   = irc://irc.perl.org/#native
-alien_name            = gmake
-alien_stage_install   = 1
-alien_build_command   = %c --prefix=%s --program-prefix=g
-alien_install_command = make install
-alien_repo            = http://ftp.gnu.org/gnu/make
-alien_pattern         = ^make-.*\.tar\.gz$
 
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   use Alien::gmake;
@@ -27,6 +20,8 @@ diag_preamble = |   diag "version      = @{[ Alien::gmake->config('version') ]}"
 diag_preamble = |   diag "install_type = @{[ Alien::gmake->install_type      ]}";
 diag_preamble = |   diag "msys?        = @{[ eval { require Alien::MSYS } ? 'installed' : 'unavailable' ]}";
 diag_preamble = | };
+
+[AlienBuild]
 
 [RemovePrereqs]
 remove = strict
@@ -43,5 +38,3 @@ File::chdir = 0
 [Author::Plicease::Upload]
 cpan = 1
 
-[PruneFiles]
-filename = t/run.t
